8055955: (ch) Remove unnecessary initialization of InetAddress from FileChannel

Reviewed-by: alanb